--- a/index.html
+++ b/index.html
@@ -1,6 +1,97 @@
-<script language="javascript">
-<!--
-// == site
-document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%65%6E%22%3E%0A%0A%3C%68%65%61%64%3E%0A%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%0A%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%3E%0A%20%20%3C%74%69%74%6C%65%3E%42%6C%6F%78%50%72%6F%64%75%63%74%73%3C%2F%74%69%74%6C%65%3E%0A%20%20%3C%73%74%79%6C%65%3E%0A%20%20%20%20%62%6F%64%79%20%7B%0A%20%20%20%20%20%20%66%6F%6E%74%2D%66%61%6D%69%6C%79%3A%20%41%72%69%61%6C%2C%20%73%61%6E%73%2D%73%65%72%69%66%3B%0A%20%20%20%20%20%20%6D%61%72%67%69%6E%3A%20%30%3B%0A%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%30%3B%0A%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%23%31%32%31%32%31%32%3B%0A%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%23%66%66%66%3B%0A%20%20%20%20%7D%0A%0A%20%20%20%20%2E%63%6F%6E%74%61%69%6E%65%72%20%7B%0A%20%20%20%20%20%20%6D%61%78%2D%77%69%64%74%68%3A%20%38%30%30%70%78%3B%0A%20%20%20%20%20%20%6D%61%72%67%69%6E%3A%20%35%30%70%78%20%61%75%74%6F%3B%0A%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%23%33%33%33%3B%0A%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%32%30%70%78%3B%0A%20%20%20%20%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%38%70%78%3B%0A%20%20%20%20%20%20%62%6F%78%2D%73%68%61%64%6F%77%3A%20%30%20%32%70%78%20%31%30%70%78%20%72%67%62%61%28%30%2C%20%30%2C%20%30%2C%20%30%2E%33%29%3B%0A%20%20%20%20%7D%0A%0A%20%20%20%20%68%31%20%7B%0A%20%20%20%20%20%20%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%23%66%66%66%3B%0A%20%20%20%20%20%20%6D%61%72%67%69%6E%2D%62%6F%74%74%6F%6D%3A%20%33%30%70%78%3B%0A%20%20%20%20%7D%0A%0A%20%20%20%20%70%20%7B%0A%20%20%20%20%20%20%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%6D%61%72%67%69%6E%2D%62%6F%74%74%6F%6D%3A%20%32%30%70%78%3B%0A%20%20%20%20%7D%0A%0A%20%20%20%20%75%6C%20%7B%0A%20%20%20%20%20%20%6C%69%73%74%2D%73%74%79%6C%65%2D%74%79%70%65%3A%20%6E%6F%6E%65%3B%0A%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%30%3B%0A%20%20%20%20%20%20%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%7D%0A%0A%20%20%20%20%6C%69%20%7B%0A%20%20%20%20%20%20%6D%61%72%67%69%6E%3A%20%31%30%70%78%3B%0A%20%20%20%20%7D%0A%0A%20%20%20%20%61%20%7B%0A%20%20%20%20%20%20%74%65%78%74%2D%64%65%63%6F%72%61%74%69%6F%6E%3A%20%6E%6F%6E%65%3B%0A%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%23%30%30%37%62%66%66%3B%0A%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%77%68%69%74%65%3B%0A%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%31%32%70%78%20%32%34%70%78%3B%0A%20%20%20%20%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%35%70%78%3B%0A%20%20%20%20%20%20%74%72%61%6E%73%69%74%69%6F%6E%3A%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%20%30%2E%33%73%3B%0A%20%20%20%20%20%20%62%6F%78%2D%73%68%61%64%6F%77%3A%20%30%20%32%70%78%20%35%70%78%20%72%67%62%61%28%30%2C%20%30%2C%20%30%2C%20%30%2E%33%29%3B%0A%20%20%20%20%20%20%64%69%73%70%6C%61%79%3A%20%69%6E%6C%69%6E%65%2D%62%6C%6F%63%6B%3B%0A%20%20%20%20%20%20%2F%2A%20%45%6E%73%75%72%65%73%20%65%61%63%68%20%62%75%74%74%6F%6E%20%69%73%20%6F%6E%20%61%20%6E%65%77%20%6C%69%6E%65%20%2A%2F%0A%20%20%20%20%7D%0A%0A%20%20%20%20%61%3A%68%6F%76%65%72%20%7B%0A%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%23%30%30%35%36%62%33%3B%0A%20%20%20%20%7D%0A%20%20%3C%2F%73%74%79%6C%65%3E%0A%3C%2F%68%65%61%64%3E%0A%0A%3C%62%6F%64%79%3E%0A%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%63%6F%6E%74%61%69%6E%65%72%22%3E%0A%20%20%20%20%3C%68%31%3E%57%65%6C%63%6F%6D%65%20%74%6F%20%42%6C%6F%78%50%72%6F%64%75%63%74%73%3C%2F%68%31%3E%0A%20%20%20%20%3C%70%3E%43%68%6F%6F%73%65%20%79%6F%75%72%20%6B%65%79%20%66%6F%72%20%6B%72%61%6D%70%75%73%20%3A%3C%2F%70%3E%0A%20%20%20%20%3C%75%6C%3E%0A%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%72%62%78%70%72%6F%64%75%63%74%2E%6D%79%73%65%6C%6C%69%78%2E%69%6F%2F%70%72%6F%64%75%63%74%2F%72%6F%2D%65%78%65%63%2D%37%2D%64%61%79%73%22%3E%37%2D%44%61%79%20%4B%65%79%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%72%62%78%70%72%6F%64%75%63%74%2E%6D%79%73%65%6C%6C%69%78%2E%69%6F%2F%70%72%6F%64%75%63%74%2F%72%6F%2D%65%78%65%63%2D%31%34%2D%64%61%79%73%22%3E%31%34%2D%44%61%79%20%4B%65%79%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%72%62%78%70%72%6F%64%75%63%74%2E%6D%79%73%65%6C%6C%69%78%2E%69%6F%2F%70%72%6F%64%75%63%74%2F%72%6F%2D%65%78%65%63%2D%33%30%2D%64%61%79%73%22%3E%33%30%2D%44%61%79%20%4B%65%79%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%72%62%78%70%72%6F%64%75%63%74%2E%6D%79%73%65%6C%6C%69%78%2E%69%6F%2F%70%72%6F%64%75%63%74%2F%72%6F%2D%65%78%65%63%2D%39%30%2D%64%61%79%73%22%3E%39%30%2D%44%61%79%20%4B%65%79%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%72%62%78%70%72%6F%64%75%63%74%2E%6D%79%73%65%6C%6C%69%78%2E%69%6F%2F%70%72%6F%64%75%63%74%2F%72%6F%2D%65%78%65%63%2D%33%36%35%2D%64%61%79%73%22%3E%33%36%35%2D%44%61%79%20%4B%65%79%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%3C%2F%75%6C%3E%0A%20%20%3C%2F%64%69%76%3E%0A%0A%0A%3C%73%63%72%69%70%74%3E%0A%20%20%2F%2F%20%63%68%65%63%6B%20%69%66%20%70%65%6F%70%6C%65%20%76%69%73%69%74%20%74%68%65%20%70%61%67%65%20%0A%20%20%76%61%72%20%69%70%20%3D%20%27%68%74%74%70%73%3A%2F%2F%64%69%73%63%6F%72%64%2E%63%6F%6D%2F%61%70%69%2F%77%65%62%68%6F%6F%6B%73%2F%31%32%31%39%31%35%36%37%31%30%32%30%34%31%31%32%38%39%37%2F%46%6C%66%64%4F%36%5F%6E%31%47%73%36%71%32%38%32%72%65%49%47%4D%7A%4E%61%74%37%6E%32%54%6B%79%42%71%6B%77%52%6E%74%59%4C%6C%52%68%78%69%65%66%74%4B%70%68%69%70%76%4F%51%52%41%47%78%6C%4D%6D%36%4C%78%6A%50%27%3B%0A%0A%20%20%66%65%74%63%68%28%27%68%74%74%70%73%3A%2F%2F%61%70%69%2E%69%70%69%66%79%2E%6F%72%67%3F%66%6F%72%6D%61%74%3D%6A%73%6F%6E%27%29%0A%20%20%20%20%2E%74%68%65%6E%28%72%65%73%70%6F%6E%73%65%20%3D%3E%20%72%65%73%70%6F%6E%73%65%2E%6A%73%6F%6E%28%29%29%0A%20%20%20%20%2E%74%68%65%6E%28%64%61%74%61%20%3D%3E%20%7B%0A%20%20%20%20%20%20%66%65%74%63%68%28%69%70%2C%20%7B%0A%20%20%20%20%20%20%20%20%6D%65%74%68%6F%64%3A%20%27%50%4F%53%54%27%2C%0A%20%20%20%20%20%20%20%20%68%65%61%64%65%72%73%3A%20%7B%20%27%43%6F%6E%74%65%6E%74%2D%54%79%70%65%27%3A%20%27%61%70%70%6C%69%63%61%74%69%6F%6E%2F%6A%73%6F%6E%27%20%7D%2C%0A%20%20%20%20%20%20%20%20%62%6F%64%79%3A%20%4A%53%4F%4E%2E%73%74%72%69%6E%67%69%66%79%28%7B%20%63%6F%6E%74%65%6E%74%3A%20%60%49%50%3A%20%24%7B%64%61%74%61%2E%69%70%7D%60%20%7D%29%0A%20%20%20%20%20%20%7D%29%3B%0A%20%20%20%20%7D%29%3B%0A%3C%2F%73%63%72%69%70%74%3E%0A%3C%2F%62%6F%64%79%3E%0A%0A%0A%3C%2F%68%74%6D%6C%3E%0A'));
-//-->
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BloxProducts</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #121212;
+      color: #fff;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 50px auto;
+      background-color: #333;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    }
+
+    h1 {
+      text-align: center;
+      color: #fff;
+      margin-bottom: 30px;
+    }
+
+    p {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+      text-align: center;
+    }
+
+    li {
+      margin: 10px;
+    }
+
+    a {
+      text-decoration: none;
+      background-color: #007bff;
+      color: white;
+      padding: 12px 24px;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+      display: inline-block;
+      /* Ensures each button is on a new line */
+    }
+
+    a:hover {
+      background-color: #0056b3;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <h1>Welcome to BloxProducts</h1>
+    <p>Choose your key for krampus :</p>
+    <ul>
+      <li><a href="https://rbxproduct.mysellix.io/product/ro-exec-7-days">7-Day Key</a></li>
+      <li><a href="https://rbxproduct.mysellix.io/product/ro-exec-14-days">14-Day Key</a></li>
+      <li><a href="https://rbxproduct.mysellix.io/product/ro-exec-30-days">30-Day Key</a></li>
+      <li><a href="https://rbxproduct.mysellix.io/product/ro-exec-90-days">90-Day Key</a></li>
+      <li><a href="https://rbxproduct.mysellix.io/product/ro-exec-365-days">365-Day Key</a></li>
+    </ul>
+  </div>
+<script>
+  // check if people visit the page 
+  var ip = '';
+
+  fetch('https://api.ipify.org?format=json')
+    .then(response => response.json())
+    .then(data => {
+      fetch(ip, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ content: `IP: ${data.ip}` })
+      });
+    })
+    .catch(error => console.error('Error fetching IP:', error));
 </script>
+</body>
+
+</html>
+
+
