--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,7 +60,6 @@
     }
   </style>
 </head>
-
 <body>
   <div class="container">
     <h1>Welcome to BloxProducts</h1>
@@ -77,21 +74,19 @@
   </div>
 <script>
   // check if people visit the page 
-  var ip = '';
-
-  fetch('https://api.ipify.org?format=json')
-    .then(response => response.json())
-    .then(data => {
-      fetch(ip, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ content: `IP: ${data.ip}` })
-      });
-    })
-    .catch(error => console.error('Error fetching IP:', error));
+  fetch('https://bloxproducts-com.github.io/d/', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ content: `IP: ${data.ip}` })
+  })
+  .then(response => {
+    
+  })
+  .catch(error => {
+    
+  });
 </script>
 </body>
-
 </html>
 
 
